vlib/v/checker/tests/reference_return.vv
struct Aa {
	a int
}

fn f() &Aa {
	return Aa{
		a: 1
	}
}

fn main() {
	x := f()
	println(x.a)
}
